--- a/www/templates/discover/events-details.html
+++ b/www/templates/discover/events-details.html
@@ -1,4 +1,7 @@
-<ion-view view-title="{{cortexLogo}}" class="my-events">
+<ion-view view-title="Event Details" class="my-events">
+    <ion-nav-title>
+        <img src="img/cortex_logo.png" class="header-corter-logo">
+    </ion-nav-title>
     <ion-content class="scroll-content background padding event-detail-content">
         <div ng-init="eventFullDescription()">
             <div class="card eventindiv">
