--- a/www/templates/discover/filter-slider.html
+++ b/www/templates/discover/filter-slider.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="filter-footer">
-            <button class="button button-positive button-small" ng-click="hideFilterSlider()">CANCEL</button>
+            <button class="button button-positive button-small" ng-click="hideFilterSliderCancel()">CANCEL</button>
             <button class="button button-positive button-small" ng-click="hideFilterSlider()">APPLY FILTER</button>
         </div>
     </ion-content>
