--- a/scss/discover.scss
+++ b/scss/discover.scss
@@ -17,6 +17,7 @@
             margin-left: 10px;
         }
         .user-name {
+            margin-top: 4px;
             vertical-align: text-top;
             text-align: right;
             text-transform: capitalize;
@@ -41,6 +42,7 @@
             position: relative;
             top: 0;
             clear: both;
+            height: 18px;
             .slider-pager-page {
                 opacity: 1;
                 color: $color-light;
@@ -56,14 +58,7 @@
         margin: 15px 0;
         padding: 10px 0 10px 15px;
         .header {
-            padding-right: 15px;
-            h4 {
-                text-transform: uppercase;
-                color: $color-grey;
-                padding: 0;
-                margin: 0;
-                font-family: 'bold';
-            }
+            @extend .common-main-title;
         }
         .app-box {
             width: 100%;
@@ -95,27 +90,19 @@
     .events {
         position: relative;
         background-color: $color-dull;
-        padding-bottom: 20px;
+        padding: 5px 5px 20px 10px;
         .heading {
-            padding-left: 18px;
-            padding-top: 5px;
-            text-transform: uppercase;
-            color: $color-grey;
-            font-family: 'bold';
+            @extend .common-main-title;
         }
         .see-all {
             position: absolute;
-            top: 0;
-            right: 5px;
-            padding-right: 15px;
-            padding-top: 7px;
+            top: 12px;
+            right: 10px;
             color: $color-link;
         }
         .eventindiv {
-            background-color: $color-light;
-            border: 1px solid $color-light;
-            margin: 7px 20px;
-            padding: 0px;
+            // margin: 7px 20px;
+            padding: 0;
             .date-box {
                 position: relative;
                 width: 50px;
@@ -145,11 +132,12 @@
                 }
             }
             .text-box {
-                padding: 0 10px;
+                padding: 0;
                 padding-left: 35px;
                 .row-top {
                     a {
                         color: $color-primary;
+                        font-family: 'bold';
                     }
                 }
                 .row-bottom {
@@ -222,9 +210,6 @@
         }
     }
 }
-
-
-/*sort & filter slider*/
 
 .overlay-bg {
     position: fixed;
@@ -344,271 +329,5 @@
     .filter-footer {
         margin: 15px 0px 25px 0px;
         text-align: center;
-    }
-}
-
-
-/* date picker in search results page */
-
-.ionic_datepicker_popup {
-    .popup-body {
-        .selected_date_full {
-            background-color: $color-primary !important;
-        }
-    }
-    .selected_date {
-        background-color: $color-primary !important;
-    }
-    .popup-buttons {
-        button {
-            background-color: $color-primary !important;
-        }
-    }
-}
-
-
-/* popup of the date picker in searc results page */
-
-.popup-container {
-    &.popup-showing {
-        z-index: 9999;
-        visibility: visible;
-    }
-}
-
-
-/* my events page */
-
-.my-events {
-    .scroll-content {
-        top: 120px;
-    }
-    .subheader-tabs {
-        line-height: 13px;
-        text-align: center;
-        color: $color-dark;
-        padding-top: 5px;
-        left: 0;
-        .tab-title {
-            font-size: 10px;
-        }
-        .tab-item {
-            text-align: center;
-            text-overflow: initial;
-            font-size: 12px;
-            padding-top: 5px;
-        }
-        .border {
-            border-left: 1px solid #eee;
-        }
-        i {
-            font-size: 22px;
-            color: $color-primary;
-        }
-        a {
-            color: $color-dark;
-            font-family: 'bold';
-        }
-    }
-    .eventindiv {
-        background-color: $color-light;
-        border: 1px solid $color-light;
-        margin: -8px -10px;
-        padding: 3px;
-        .date-box {
-            position: relative;
-            width: 50px;
-            bottom: 10px;
-            .date {
-                position: absolute;
-                top: 22px;
-                left: 16px;
-            }
-            .month {
-                text-transform: uppercase;
-                position: absolute;
-                top: 43px;
-                left: 0px;
-                text-align: center;
-                font-size: 10px;
-                color: $color-light;
-                font-size: 10px;
-                width: 100%;
-                div {
-                    position: absolute;
-                    left: 0;
-                }
-            }
-            img {
-                width: 50px;
-                padding-top: 10px;
-            }
-        }
-        .text-box {
-            padding: 0 12px;
-            padding-left: 35px;
-            .row-top {
-                a {
-                    color: $color-primary;
-                }
-            }
-            .row-bottom {
-                font-family: 'light';
-            }
-        }
-        .bg {
-            background-image: url(./svg/img_calendar.svg);
-        }
-        .event-description {
-            width: 100%;
-            font-family: 'light';
-            p {
-                padding: 7px;
-                color: $color-dark;
-            }
-            a {
-                padding: 7px;
-                color: $color-dark;
-                text-decoration: none;
-                img {
-                    width: 15px;
-                }
-            }
-            .description-button {
-                text-align: center;
-                padding-bottom: 12px;
-                a {
-                    color: $color-link;
-                    padding: 5px;
-                }
-            }
-        }
-    }
-    .myevents-calendar {
-        width: 100%;
-        background-color: $color-primary;
-        height: 45px;
-        text-transform: uppercase;
-        color: #ffffff;
-        border-color: $color-primary;
-    }
-    .event-detail-content {
-        top: 44px;
-    }
-}
-
-.search-results-wrapper {
-    .header-bar-icns {
-        td {
-            padding: 5px 10px;
-        }
-    }
-    .main-title {
-        @extend .common-main-title;
-    }
-    .view-more {
-        margin: 30px 0;
-        text-transform: uppercase;
-        text-align: center;
-        color: $color-link;
-    }
-    .brand {
-        margin: 30px 0;
-        text-align: center;
-        img {
-            width: 250px;
-        }
-    }
-    .search-results-box {
-        width: 100%;
-        margin-top: 20px;
-        .topic-box {
-            margin: 0;
-            padding: 0;
-            .icn {
-                width: 50px;
-                height: 50px;
-                background: $color-link;
-                border-radius: 100%;
-                position: relative;
-                img {
-                    position: absolute;
-                }
-            }
-            .topic {
-                text-transform: uppercase;
-                color: $color-grey;
-                margin-left: 10px;
-                line-height: 50px;
-                font-family: 'light';
-                white-space: nowrap;
-            }
-        }
-        .content-box {
-            margin-top: 5px;
-            .cards {
-                width: 100%;
-                background: $color-light;
-                border-left: 3px solid $color-primary;
-                padding: 10px;
-                margin-top: -5px;
-                .title {
-                    font-family: "bold";
-                    color: $color-link;
-                }
-                .published {
-                    b {
-                        font-family: "bold";
-                    }
-                }
-                .description {
-                    color: $color-grey;
-                }
-                hr {
-                    border-color: #eee;
-                    opacity: 0.4
-                }
-                .pdf-text-box {
-                    padding-left: 10px;
-                }
-                .media-web-search {
-                    padding: 10px;
-                }
-            }
-        }
-        &.media-pdf {
-            .content-box {
-                .placeholder {
-                    width: 110px;
-                    height: 100px;
-                    background: $color-link;
-                    position: relative;
-                }
-            }
-        }
-        &.media-video {
-            .content-box {
-                .placeholder {
-                    img {
-                        width: 100%;
-                    }
-                }
-                .cards {
-                    .title {
-                        color: $color-dark;
-                    }
-                }
-            }
-        }
-    }
-}
-
-.scroll-content.search-results-wrapper {
-    padding: 25px 10px 100px 10px;
-}
-
-@media (min-width: 768px) {
-    .search-results-wrapper .brand img {
-        width: 500px;
     }
 }
