--- a/www/templates/applibrary/applibrary.html
+++ b/www/templates/applibrary/applibrary.html
@@ -1,6 +1,8 @@
-<ion-view view-title="{{cortexLogo}}" class="app-library">
+<ion-view view-title="App Library" class="app-library">
+    <ion-nav-title>
+        <img src="img/cortex_logo.png" class="header-corter-logo">
+    </ion-nav-title>
     <ion-nav-buttons side="secondary">
-        <!-- <img ng-click="redirectDisover()" src="img/svg/icon_search_grey.svg" class="icon-my-learning-search" /> -->
         <i ng-click="redirectDisover()" class="all-icon-icon_search_white header-search-icon"></i>
     </ion-nav-buttons>
     <ion-content class="padding">
@@ -11,7 +13,7 @@
             <div ng-repeat="item in appList">
                 <div ng-if="item.os == platform">
                     <div class="item item-divider" ng-show="item.type == 'separator'">
-                        <h2><b>{{item.title}}</b></h2>
+                        <h3 class="group-title">{{item.title}}</h3>
                     </div>
                     <div class="item item-thumbnail-left" ng-show="item.type != 'separator' && item.os==platform" ng-click="openPage(item.url)">
                         <img ng-src="{{item.coverimageurl}}" alt="">
