--- a/www/templates/mylearning/games.html
+++ b/www/templates/mylearning/games.html
@@ -1,4 +1,7 @@
-<ion-view view-title="{{cortexLogo}}" class="games-wrapper">
+<ion-view view-title="Games" class="games-wrapper">
+    <ion-nav-title>
+        <img src="img/cortex_logo.png" class="header-corter-logo">
+    </ion-nav-title>
     <ion-content>
         <div class="card cards" ng-repeat="gameItem in gameItems">
             <div class="game-title">{{gameItem.title}}</div>
