--- a/www/templates/resource/whitepaper.html
+++ b/www/templates/resource/whitepaper.html
@@ -1,32 +1,18 @@
-<ion-view view-title="{{cortexLogo}}">
+<ion-view view-title="Whitepaper">
+    <ion-nav-title>
+        <img src="img/cortex_logo.png" class="header-corter-logo">
+    </ion-nav-title>
     <ion-header-bar class="bar-subheader searchinput">
         <label class="item item-input searchbox">
             <i class="icon ion-ios-search placeholder-icon"></i>
             <input type="search" placeholder="Search for a keyword" ng-model="searchString" ng-change="searchTextDidChange()">
         </label>
     </ion-header-bar>
-    <ion-content class="mylearning-wrapper">
+    <ion-content class="padding">
         <div class="resource">
-            <div class="scte1">
-                <h4 class="heading1">WHITE PAPER</h4>
-                <!-- <ion-list>
-                    <div class="list">
-                        <div collection-repeat="item in whitePapers | filter:searchString track by $index" ng-click="openURL(item.fileName)">
-                            <ion-item class="item-stable scte-list1">
-                                <div class="row">
-                                    <div>
-                                        <div class="row">
-                                            <a> {{item.title}}  </a>
-                                        </div>
-                                        <div class="row break">{{item.title}}</div>
-                                    </div>
-                                    <div class="arrow1"><img src="svg/icon_arrow.svg" /></div>
-                                </div>
-                            </ion-item>
-                        </div>
-                    </div>
-                </ion-list> -->
-                <ion-list class="standards-list">
+            <div class="whitepaper">
+                <h4 class="heading">WHITE PAPERS</h4>
+                <ion-list class="whitepaper-list">
                     <ion-item class="item-remove-animate item-avatar item-icon-right" collection-repeat="item in whitePapers | filter:searchString track by $index" ng-click="openURL(item.fileName)" type="item-text-wrap">
                         <img src="img/u214.png">
                         <h2><a>{{item.title}}</a></h2>
