--- a/www/templates/techtips/techtipsleafcontent.html
+++ b/www/templates/techtips/techtipsleafcontent.html
@@ -1,17 +1,12 @@
-<ion-view view-title="{{cortexLogo}}" class="techtip-content-wrapper" ng-init="fetchData()">
+<ion-view view-title="Tech Tip Detail" ng-init="fetchData()">
+    <ion-nav-title>
+        <img src="img/cortex_logo.png" class="header-corter-logo">
+    </ion-nav-title>
     <ion-content class="padding">
-        <div>
-            <!-- <div ng-repeat="techTipsContent in techTipsContents" class="techtips-html-type">
-            <div ng-if="techTipsContent.template == 'html'"> -->
-            <!-- <h4>{{title}}</h4> -->
-            <p ng-bind-html="content"></p>
-            <!-- </div> -->
+        <div class="card">
+            <div class="item item-text-wrap">
+                <p ng-bind-html="content"></p>
+            </div>
         </div>
-        <!-- <div>
-            <h5><b>Digital Leakage</b></h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.</p>
-        </div> -->
     </ion-content>
 </ion-view>
